app/assets/stylesheets/lessons.scss
.lesson-wrapper, .project-wrapper {

  h1 {
    color: black;
    font-weight: 300;
    font-size: 36px;
    padding-top: 5px;
  }

  h2 {
    color: #8DC5E6;
    font-weight: 800;
    font-size: 26px;
    text-transform: uppercase;
  }

  h3 {
    color: #666666;
    font-weight: 600;
    text-transform: uppercase;
  }

  h4 {
    color: #666666;
    font-size: 18px;
    font-weight: 400;
  }

  p {
    color: black;
    font-size: 18px;
    font-weight: 400;
  }

  li {
    margin-left: 20px;
    font-size: 1.2em;

    &:last-child {
      margin-bottom: 20px;
    }

    &:first-child {
      margin-top: -10px;
    }
  }

  hr {
      color: #333333;
  }

  blockquote {
    background: #F1F7F7;
    margin: 0;
    padding: 30px;
    border: none;
    max-width: 600px;
  }

  blockquote.toc {
    max-width: none;
  }

  blockquote img {
    padding: 20px;
  }

  .sharing {
    margin: -10px 0 0 0;

    li {
      margin-left: 20px;

      &:last-child {
        margin-bottom: 30px;
      }
    }
  }

  .collapsible {
    div {
      margin: 25px -20px;

      h2.collapsible-heading, h3.collapsible-heading {
        background-color: #F1F7F7;
        padding: 15px 20px;
      }

      h2.collapsible-plus, h3.collapsible-plus {
        float: right;
        font-size: 200%;
      }
    }
  }

  .collapsed {
    margin: -10px 0;
  }

  h1.finished {
      margin: 50px 0;
      border-top: 0;
  }

  p.finished {
      margin-bottom: 100px;
  }

  .anchor {
    border-top: 80px solid transparent;
    margin-top: -80px;
    -webkit-background-clip: padding-box;
    -moz-background-clip: padding;
    background-clip: padding-box;
  }

  #watch {
    margin-bottom: 20px;
  }

  #synopsis {
    p {
      font-size: 16px;
      color: gray;
      margin-bottom: 20px;
    }
  }

}

.insp-img-wrapper {
  position: relative;
}

#inspiration-image-title {
  font-weight: bold;
}

.insp-img-wrapper {
  position: relative;

  .insp-img-glyph {
      visibility: hidden;
      color: #F1F7F7;
      font-size: 200%;
      font-style: normal;
      position: absolute;
      top: 37px;
      left: 480px;

      -webkit-transform: rotate(45deg);
      -moz-transform: rotate(45deg);
      -o-transform: rotate(45deg);
  }
}

a.modal-insp:hover {

  .insp-img-glyph {
    visibility: visible;
  }
}

.lessons-toc {
  font-size: 14px;
  line-height: 22px;

  h3 {
    display: inline;
    font-size: 14px;
    text-transform: none;
    font-weight: bold;
  }
}

.project-wrapper hr {
  margin-top: 25px;
  margin-bottom: -20px;
}

.project-wrapper b {
  text-transform: uppercase;
  font-size: 18px;
}

.project-wrapper, .lesson-wrapper {
  .pdf-indent {
    margin-top: -10px;
  }
}


.lesson-wrapper {
  display: inline-block;
}

#lesson-main {
  width: 85%;
  float: right;
}

#lesson-sidebar {
  float: left;

  // blockquote {
    // font-style: normal;
    // padding-bottom: 45px;

  div {
    position: fixed;
    top: 14%;
    // left: 9%;
    color: #767676;

    #lesson-map {
      // margin-left: 15px;
      margin-left: -60px;
      line-height: 1.75;
      // margin-left: 5px;
    }

    p {
      font-size: 14px;
      // margin-left: 20px;
      // margin-left: 10px;
      margin-left: -60px;
      display: flex;
      margin-bottom: -15px;

      p {
        margin-left: 10px;
        a {
          color: gray;
          text-decoration: none;

          &:hover {
            color: #8DC5E6;
            padding-left: 4px;
            margin-left: -6px;
            border-left: 2px solid #8DC5E6;
          }
        }

        &:last-child {
          margin-bottom: 0;
        }
      }
    }

    a {
      color: #8DC5E6;
    }

  }
}

.atTop a {
  padding-left: 4px;
  margin-left: -6px;
  border-left: 2px solid gray;
}

@media (max-width: 640px)
{
    #mySlider
    {
        display: none;
    }
}

